Bug 160698 - Crash after opening Print dialog
Summary: Crash after opening Print dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: high critical
Assignee: Tibor Nagy
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Print-Dialog Crash
  Show dependency treegraph
 
Reported: 2024-04-16 16:54 UTC by raal
Modified: 2024-04-18 11:30 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2024-04-16 16:54:35 UTC
Description:
Crash after opening Print dialog.

Steps to Reproduce:
1. Open Writer
2. Open Print dialog Ctrl+P, close the dialog
3. Open Toggle Print preview, Close preview
4. Open Print dialog Ctrl+P
(repeat 2-4)


Actual Results:
crash

Expected Results:
no crash


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cb4698626f17e005c820a7138c63a03c21120ecd
CPU threads: 4; OS: Linux 6.5; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded Jumbo
Comment 1 m_a_riosv 2024-04-16 18:26:42 UTC
Reproducible, no crash signature, and recovery option after restart.
Version: 24.2.1.0.0+ (X86_64) / LibreOffice Community
Build ID: cafcc50570f9edaaebe74d2152bae5df1cc2edfe
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: default; VCL: win
Locale: es-ES (es_ES); UI: es-ES
Calc: CL threaded

regression, not reproducible.
Version: 24.2.2.2 (X86_64) / LibreOffice Community
Build ID: d56cc158d8a96260b836f100ef4b4ef25d6f1a01
CPU threads: 16; OS: Windows 10.0 Build 22631; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded
Comment 2 Xisco Faulí 2024-04-17 14:14:42 UTC
Regression introduced by:

author	Tibor Nagy <tibor.nagy.extern@allotropia.de>	2024-02-28 11:13:10 +0100
committer	Nagy Tibor <tibor.nagy.extern@allotropia.de>	2024-02-29 01:36:08 +0100
commit 364f0bb1cac0e12f5f926857f61c2f329a353ec7 (patch)
tree 27ae9514609b90ec0c8e8170377200c8bb543751
parent 6a064b1967e06e40be40817deff99d00c1a8554f (diff)
tdf#155218 sc: fix regression page orientation in print dialog

Bisected with: bibisect-linux64-24.8
Comment 3 Amin Irgaliev 2024-04-17 14:54:02 UTC
It looks like the problem appear because to the added resetPrintArea() method in https://gerrit.libreoffice.org/c/core/+/164085/3/vcl/source/gdi/print3.cxx#567

When line 567 is commented, then the Writer doesn't crash.
Comment 4 Commit Notification 2024-04-18 06:35:34 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d129495bb19dededacb27fee18c9ed7273dddb82

tdf#160698: fix crash after opening print dialog

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.