tdf#160698: fix crash after opening print dialog

Regression from I5a0ab3d781b21eff575afaebb233237eff1827d5
"tdf#155218 sc: fix regression page orientation in print dialog"

Change-Id: Iccdd8a6eefcadea963a1ffec61c0bcf798931fcd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/166197
Tested-by: Jenkins
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>